--- a/config.toml
+++ b/config.toml
@@ -14,8 +14,8 @@ PygmentsStyle = "monokai"
 rssLimit  = 10  # Maximum number of items in the RSS feed.
 copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
 
-# googleAnalytics = ""
-# disqusShortname = ""
+googleAnalytics = "UA-127321879-1"
+disqusShortname = "nosrednawall-com-br"
 
 archetypeDir = "archetypes"
 contentDir   = "content"
